initial commit - stuck on web3 issues

--- a/src/dapp/flightsurety.css
+++ b/src/dapp/flightsurety.css
@@ -12,6 +12,12 @@ body {
     padding: 40px;
 }
 
+.display-wrapper {
+    border: solid 2px #fff;
+    padding: 15px;
+    margin: 15px;
+}
+
 .top-20 {
     margin-top: 20px;
 }
@@ -22,6 +28,10 @@ h5 {
 
 section {
     margin-bottom: 50px;
+}
+
+.form {
+    padding: 10px;
 }
 
 .field {
